# RN.Ai-predict

./: .gitignore  README.md  pyproject.toml
src/rnaipredict/: features.py  genes.py  predict.py
